--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,1 @@
-# Run SPRING_PROFILES_ACTIVE=one mvn spring-boot:run
-myvalue=zero
-
-#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ostravice_pzi
-#spring.datasource.username=root
-#spring.datasource.password=root
-
-#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/orcl
-#spring.datasource.password=LEGALDATA
-#spring.datasource.username=LEGALDATA
-#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+ip.addresses = 10.0.0.200
