--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.stankay.test</groupId>
-    <artifactId>test-spring-boot</artifactId>
+    <artifactId>test-spring-boot-lcm</artifactId>
     <packaging>jar</packaging>
     <version>2.8.0-SNAPSHOT</version>
 
@@ -14,7 +14,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <springboot.version>2.2.6.RELEASE</springboot.version>
+        <springboot.version>2.1.8.RELEASE</springboot.version>
     </properties>
 
     <dependencies>
@@ -24,6 +24,18 @@
             <version>${springboot.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.codehaus.janino/janino -->
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>2.5.16</version>
+        </dependency>
+
         <!-- Spring boot live reload AKA cool thing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -31,20 +43,6 @@
             <version>${springboot.version}</version>
             <scope>runtime</scope>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <version>${springboot.version}</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.jsoup</groupId>
-            <artifactId>jsoup</artifactId>
-            <version>1.13.1</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
     <build>
