Experiments with quartz scheduler

--- a/pom.xml
+++ b/pom.xml
@@ -21,13 +21,18 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
-        <camel.version>3.3.0</camel.version>
+        <camel.version>3.20.5</camel.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-spring-boot-starter</artifactId>
+            <version>${camel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-quartz</artifactId>
             <version>${camel.version}</version>
         </dependency>
         <dependency>
